--- a/packages/ampath-esm-clinic-dashboard-hiv-lists/src/common/report-view.css
+++ b/packages/ampath-esm-clinic-dashboard-hiv-lists/src/common/report-view.css
@@ -7,7 +7,6 @@
 
 .reportViewContainer table {
   width: 100%;
-
 }
 
 .reportViewContainer table th,
@@ -19,4 +18,9 @@ td {
 .reportTableHeader {
   background-color: var(--omrs-color-interaction-plus-one);
   color: var(--omrs-color-ink-white);
+}
+
+.indicator:hover {
+  cursor: pointer;
+  background-color: #eff2fc;
 }
