--- a/packages/ampath-esm-clinic-dashboard-hiv-lists/src/ovc-report/ovc-report.css
+++ b/packages/ampath-esm-clinic-dashboard-hiv-lists/src/ovc-report/ovc-report.css
@@ -22,3 +22,22 @@
 .reportButton > button {
   cursor: pointer;
 }
+
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  margin: 0rem 0.625rem;
+  padding: 0.625rem;
+  border: 0.0625rem solid lightgrey;
+}
+
+.inputContainer label {
+  padding: 0.125rem 0rem;
+  font-weight: 500;
+}
+
+.inputContainer input {
+  outline: none;
+  border: 0.0625rem solid lightgrey;
+  padding: 0.625rem;
+}
