--- a/packages/ampath-esm-clinic-dashboard-hiv-lists/src/patient-list/patient-list.css
+++ b/packages/ampath-esm-clinic-dashboard-hiv-lists/src/patient-list/patient-list.css
@@ -27,6 +27,7 @@
   overflow-x: auto;
   line-height: 1.4;
   border-bottom: 1px solid var(--omrs-color-bg-lowest-contrast);
+  /* width: 100%; */
 }
 
 .table thead tr {
@@ -34,6 +35,8 @@
   white-space: nowrap;
   font-family: Calibri, "Segoe UI", Thonburi, Arial, Verdana, sans-serif;
   font-size: 10pt;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .table thead th {
@@ -44,6 +47,9 @@
   border-right: 1px solid var(--omrs-color-ink-white);
   text-align: left;
   padding: 0rem 0.325rem 0rem 0.25rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .table tbody tr {
@@ -68,8 +74,9 @@
 
 .table tbody td {
   white-space: nowrap;
-  min-width: 50px;
-  max-width: 250px;
+  min-width: 25px;
+  width: 250px;
+  max-width: 300px;
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: 14px;
@@ -77,6 +84,11 @@
   padding: 0.25rem 0.25rem;
   border-right: 1px dotted #9bc2e6;
   border-left: 2px solid transparent;
+}
+
+.table tbody td a {
+  text-decoration: none;
+  color: #2e8aff;
 }
 
 .button-container {
